# prolog

./: .gitignore  Main.hs  Prolog.cabal  narradar-prolog.cabal  prelude.pl  prolog.cabal
Language/: Prolog.hs
Language/Prolog/: Parser.hs  REPL.hs  Semantics.hs  Semantics.hs~  Syntax.hs  Syntax.hs~  sibling.pl
Text/ParserCombinators/Parsec/: Applicative.hs
