name: narradar-prolog
version: 0.3
build-type: Simple
Cabal-Version:  >= 1.6
license: PublicDomain
homepage: http://github.com/pepeiborra/prolog
synopsis: Prolog Parsec based parser
description: 
category: Language
author: Pepe Iborra

Flag transformers
   default: False

Library
  buildable: True
  build-depends: 
    base, 
    parsec > 3, 
    pretty, 
    logict, 
    containers, 
    narradar-term >= 0.3, 
    bifunctors, 
    control-monad-free >= 0.4,
    applicative-extras,
    prelude-extras,
    hoed-mini
  if flag(transformers)
     build-depends: transformers, monads-fd
  else
     build-depends: mtl
  exposed-modules:
     Language.Prolog.Parser
     Language.Prolog.Syntax
     Language.Prolog.Semantics
  extensions:
     DeriveFunctor,
     DeriveFoldable,
     DeriveTraversable
--     Text.ParserCombinators.Parsec.Applicative

-- Executable hProlog
--  buildable: False
--  build-depends: haskeline, logict
--  main-is: Language/Prolog/REPL.hs
--  ghc-options: -main-is Language.Prolog.REPL.main
