name: prolog
version: 0.1.20090513
build-type: Simple
Cabal-Version:  >= 1.2
license: PublicDomain
homepage: http://github.com/pepeiborra/prolog
synopsis: Prolog Parsec based parser
description: 
category: Language
author: Pepe Iborra

Flag transformers
   default: False

Library
  buildable: True
  build-depends: base, parsec, pretty, containers, term, control-monad-free >= 0.4 
  if flag(transformers)
     build-depends: transformers, monads-fd
  else
     build-depends: mtl
  exposed-modules:
     Language.Prolog.Parser
     Language.Prolog.Syntax
     Language.Prolog.Semantics
