name: prolog
version: 0.1.20090601
build-type: Simple
Cabal-Version:  >= 1.2
license: PublicDomain
homepage: http://github.com/pepeiborra/prolog
synopsis: Prolog Parsec based parser
description: 
category: Language
author: Pepe Iborra

Flag transformers
   default: False

Library
  buildable: True
  build-depends: base, parsec, prettyclass, containers, term > 0.1, control-monad-free >= 0.4 
  if flag(transformers)
     build-depends: transformers, monads-fd
  else
     build-depends: mtl
  exposed-modules:
     Language.Prolog.Parser
     Language.Prolog.Syntax
     Language.Prolog.Semantics
     Text.ParserCombinators.Parsec.Applicative

Executable hProlog
  buildable: True
  build-depends: haskeline, logict
  main-is: Language/Prolog/REPL.hs
  ghc-options: -main-is Language.Prolog.REPL.main
